--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_CLIENT_ID = 264628624861-l1f31m9tchs324uoe669pdjqc61i5em5
+GOOGLE_CLIENT_ID = 264628624861-l1f31m9tchs324uoe669pdjqc61i5em5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
