--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
+
+# HOST
+PUBLIC_HOST = http://localhost
+PORT = 8080
+
+# DATABASES
+DB_USER = root
+DB_PASSWORD =
+DB_HOST = 127.0.0.1
+DB_PORT = 3306
+DB_NAME = interners
+
+# GOOGLE API
 GOOGLE_CLIENT_ID = 264628624861-l1f31m9tchs324uoe669pdjqc61i5em5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
